# generatedata

./: .gitignore  CHANGELOG.md  LICENSE  README.md  pyproject.toml
.github/workflows/: python-tests.yml
data/raw/: EM_X_test.pt  EM_X_train.npy  EM_X_train.parquet  EM_X_train.pt  EM_Y_test.pt  EM_Y_train.npy  EM_Y_train.parquet  EM_Y_train.pt  mass_spec.parquet
generatedata/: StartTargetData.py  config.py  data_generators.py  df_to_tensor.py  load_data.py  lra_generators.py  save_data.py
notebooks/: 1-rcp-visualize-data.ipynb  2-rcp-scikit-learn.ipynb  3-rcp-load_data.ipynb  4-rcp-timeseries-datasets.ipynb
scripts/: convert_em_pt_to_npy.py  copy_data_to_http.sh  generatedata_local.py
tasks/: 001_simplify_save_data.md  002_load_data_as_sequence.md  003_focused_tests.md  004_general_notebook.md  RCP-better-way  RCP-simplify-and-improve.md  add_type_hints.md  fix_unclosed_file_handle_in_data_names.md  timeseries_01_save_data_schema.md  timeseries_02_generators.md  timeseries_03_load_as_sequence.md  validate_dataset_name_in_load_data.md
tasks/3-30-2026-opus-generated/: 000-fix-double-info-json-fetch.md  001-consolidate-load-data-as-xy-functions.md  002-fix-assert-in-save-data.md  003-centralize-data-directory-paths.md  004-fix-redundant-pathlib-import.md  005-add-http-error-handling-for-remote-loading.md  006-fix-generate-all-shadows-builtin.md  007-improve-tests-with-actual-assertions.md  008-fix-save-data-type-hints.md  009-add-reproducibility-seeds-to-geometric-generators.md  010-simplify-startargetdata-and-df-to-tensor-discoverability.md  README.md
tests/: conftest.py  test_config.py  test_df_to_tensor.py  test_generatedata_local.py  test_load_data.py  test_load_data_extra.py  test_lra_generators.py  test_save_data.py  test_timeseries.py  test_zzz_2-rcp-scikit-learn.ipynb  test_zzz_3-rcp-load_data.ipynb  test_zzz_4-rcp-timeseries-datasets.ipynb
