[project]
name = "generatedata"
version = "0.3.1"
description = "Library of code to generate synthetic data for testing and benchmarking machine learning algorithms in a consistent dynamical systems setting."
authors = [{name = "Randy Paffenroth", email = "rcpaffenroth@wpi.edu"}]
license = {text = "BSD 3-Clause License"}
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "torch==2.5.1",
    "torchvision>=0.20,<0.21",
    "numpy>=2.1,<2.2",
    "mnist1d",
    "pandas>=2.2,<2.3",
    "pyarrow>=17,<18",
    "matplotlib>=3.9,<3.10",
    "plotly>=5.24,<5.25",
    "ipykernel>=6.29,<6.30",
    "ipympl>=0.9,<0.10",
    "jupyterlab>=4.3,<4.4",
    "scikit-learn>=1.6,<1.7",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3,<8.4",
    "pylint>=3.2,<3.3",
    "nbmake>=1.5,<1.6",
    "jupytext>=1.16,<1.17",
]

[tool.uv]
index-url = "https://download.pytorch.org/whl/cu121"
extra-index-url = ["https://pypi.org/simple"]

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "--nbmake"
testpaths = [
    "tests",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
